Optimization code's structures

--- a/ms-account/src/main/resources/application.yml
+++ b/ms-account/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: ms-account # Microservice name for Eureka registration
+    name: ms-account
 
   rabbitmq:
     host: localhost
@@ -54,7 +54,6 @@ management:
   metrics:
     export:
       prometheus:
-      # Bu hissəni əlavə etməyə ehtiyac yoxdur, çünki artıq Prometheus avtomatik olaraq aktiv olur.
   endpoint:
     prometheus:
       enabled: true
