--- a/ms-account/build.gradle
+++ b/ms-account/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.5'
+    id 'org.springframework.boot' version '3.2.0'
     id 'io.spring.dependency-management' version '1.1.6'
 }
 
@@ -45,7 +45,7 @@ dependencies {
 
     // Spring Cloud Dependencies
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server' // Eureka server for service registry
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.10.RELEASE' // Circuit breaker for resilience
+    //implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.10.RELEASE' // Circuit breaker for resilience
 
     // Monitoring and Metrics
     implementation 'org.springframework.boot:spring-boot-starter-actuator' // Actuator for health monitoring
