--- a/ms-account/src/main/resources/application.yml
+++ b/ms-account/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
 
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://localhost:5432/account_db
     username: postgres
-    password: Aba32835
+    password: mysecretpassword
     driver-class-name: org.postgresql.Driver
 
   servlet:
@@ -23,7 +23,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
