--- a/ms-identity/build.gradle
+++ b/ms-identity/build.gradle
@@ -64,6 +64,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	runtimeOnly 'org.postgresql:postgresql'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
