--- a/ms-identity/src/main/resources/application.yml
+++ b/ms-identity/src/main/resources/application.yml
@@ -2,6 +2,17 @@ spring:
   application:
     name: ms-identity
 
+  data:
+    mongodb:
+      uri: mongodb://admin:password@localhost:27017/identity_db?authSource=admin
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/passforgot_db
+    username: postgres
+    password: mysecretpassword
+    driver-class-name: org.postgresql.Driver
+
+
   mail:
     host: smtp.gmail.com
     port: 587
@@ -12,6 +23,9 @@ spring:
         smtp:
           auth: true
           starttls.enable: true
+  jpa:
+    hibernate:
+      ddl-auto: create
 
 eureka:
   client:
@@ -24,16 +38,16 @@ eureka:
     prefer-ip-address: true
     instance-id: ${spring.application.name}:${server.port}
 
+
+
   servlet:
     context-path: /ms-identity
-data:
-  mongodb:
-    uri: mongodb://mongodb:mongodbd@localhost:27018/identity_db?authSource=admin
+
 management:
   endpoints:
     web:
       exposure:
-        include:  prometheus,metrics
+        include: prometheus,metrics
   metrics:
     export:
       prometheus:
@@ -58,3 +72,6 @@ node-exporter:
 server:
   port: 8093
 
+logging:
+  level:
+    org.springframework.data.mongodb.core.MongoTemplate: DEBUG
