--- a/ms-transfer/src/main/resources/application.yml
+++ b/ms-transfer/src/main/resources/application.yml
@@ -7,9 +7,9 @@ spring:
     username: guest
     password: guest
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://localhost:5432/transfer_db
     username: postgres
-    password: Aba32835
+    password: mysecretpassword
     driver-class-name: org.postgresql.Driver
 
   jpa:
