Create ms-notification and change some features

--- a/ms-account/src/main/resources/application.yml
+++ b/ms-account/src/main/resources/application.yml
@@ -39,6 +39,10 @@ eureka:
     prefer-ip-address: true
     instance-id: ${spring.application.name}:${server.port}
 
+notification:
+  queue: notification-queue
+  routingKey: notification-key
+
 account:
   queue: account.queue
   exchange: account.exchange
