--- a/ms-identity/src/main/resources/application.yml
+++ b/ms-identity/src/main/resources/application.yml
@@ -4,19 +4,28 @@ spring:
 
   data:
     mongodb:
-      uri: mongodb://admin:password@localhost:27017/identity_db?authSource=admin
+      uri: mongodb://admin:admin123@localhost:27017/identity_db?authSource=admin
 
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
-    password: Aba32835
+    password: mysecretpassword
     driver-class-name: org.postgresql.Driver
 
 
-
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ismayilzadetural712@gmail.com
+    password: rhlt ljls xgem qghl
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls.enable: true
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
 
 eureka:
   client:
